se agrega padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@
 [X] El código debe estar ordenado y documentado.
 
 5. Gestionar el código fuente utilizando Github: (2 Puntos)
-● Inicializar GIT para versionar el proyecto localmente, realizando 5 o más commits.
+[X] Inicializar GIT para versionar el proyecto localmente, realizando 5 o más commits.
 ● Implementar la creación de repositorio remoto en Github para el versionamiento del proyecto.
 ● Crear la página en Github Pages
 
